--- a/stylesheet/vignelli.css
+++ b/stylesheet/vignelli.css
@@ -94,6 +94,22 @@ body {
     .col-md-12 { width: 100%; }
 }
 
+@media screen and (min-width: 960px){
+
+    .col-sm-1  { width: 8.33333%; }
+    .col-sm-2  { width: 16.66667%; }
+    .col-sm-3  { width: 25%; }
+    .col-sm-4  { width: 33.33333%; }
+    .col-sm-5  { width: 41.66667%; }
+    .col-sm-6  { width: 50%; }
+    .col-sm-7  { width: 58.33333%; }
+    .col-sm-8  { width: 66.66667%; }
+    .col-sm-9  { width: 75%; }
+    .col-sm-10 { width: 83.33333%; }
+    .col-sm-11 { width: 91.66667%; }
+    .col-sm-12 { width: 100%; }
+}
+
 
 
 
